# EASY-3D

./: .gitignore  CMakeLists.txt  ReadMe.md  paper.bib  paper.md
DeferredShadingMSAA/: DeferredShadingMSAA.sln
ImguiPlugin/: CMakeLists.txt
ImguiPlugin/Mapple-imgui/: CMakeLists.txt  main.cpp  plugin_polyfit.cpp
ImguiPlugin/window/: CMakeLists.txt  panel.cpp  plugin.cpp  plugin.h  viewer.cpp
applications/: CMakeLists.txt
applications/Mapple/: CMakeLists.txt  dialog_poisson_reconstruction.cpp  dialog_snapshot.cpp  main.cpp  main_window.h  paint_canvas.h  paint_canvas_snapshot.cpp  widget_lighting.cpp  widget_scalar_field.cpp  widget_vector_field.cpp
applications/Mapple-imgui/: CMakeLists.txt  plugin_polyfit.cpp
applications/Mapple-imgui/Mapple-imgui/: CMakeLists.txt  main.cpp  plugin_polyfit.h
applications/Mapple-imgui/window/: main_window.cpp  panel.h  plugin.cpp  viewer.h
applications/window/: CMakeLists.txt  panel.cpp
cmake/: qt5.cmake
data/repair/: building-unoriented.ply
data/repair/ifc_data/: CUVO Ockenburghstraat KOW.ifc.mtl  Rabarberstraat144.ifc.mtl  haviklaan-6.ifc.mtl  (+1 more)
demos/Mapple/: main_window.cpp  paint_canvas.cpp  widget_checker_sphere.cpp  widget_point_cloud_renderer.cpp  widget_surface_mesh_renderer.cpp  widget_surface_mesh_texturing.cpp
demos/Mapple-imgui/: mapple.cpp  mapple.h  plugin_polyfit.h
demos/window/: main_window.h  panel.h  plugin.h
doc/references/: other.txt
easy3d/: CMakeLists.txt
easy3d/algo/: CMakeLists.txt  point_cloud_normals.cpp
easy3d/algo_ext/: CMakeLists.txt  duplicated_faces.cpp  mesh_surfacer.cpp  self_intersection.cpp
easy3d/core/: CMakeLists.txt  principal_axes.h
easy3d/fileio/: CMakeLists.txt  point_cloud_io_vg.h  surface_mesh_io_ply.cpp
easy3d/image/: CMakeLists.txt  image.cpp  image.h  image_io.cpp
easy3d/kdtree/: CMakeLists.txt
easy3d/util/: CMakeLists.txt  logging.h  timer.h
easy3d/viewer/: CMakeLists.txt  ambient_occlusion_hbao.cpp  ambient_occlusion_hbao.h  shader_manager.cpp  viewer.cpp
tutorials/Tutorial_302_Viewer_imgui/: CMakeLists.txt
tutorials/Tutorial_303_Viewer_Qt/: CMakeLists.txt  main.cpp
(+42 files in other folders)
